// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LargeLink /> should render 1`] = `
.c0 {
  display: block;
  margin-bottom: 2rem;
  padding: 2rem;
  color: #3e486e;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c0:visited {
  color: #3e486e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

<div>
  <a
    class="c0"
  >
    Ok
  </a>
</div>
`;

exports[`<LargeLink /> should render highlighted 1`] = `
.c0 {
  display: block;
  margin-bottom: 2rem;
  padding: 2rem;
  color: #3e486e;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #7598d6;
  border-radius: 0.6rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c0:visited {
  color: #3e486e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

<div>
  <a
    class="c0"
  >
    Ok
  </a>
</div>
`;

exports[`<LargeLink /> should render light 1`] = `
.c0 {
  display: block;
  margin-bottom: 2rem;
  padding: 2rem;
  color: #3e486e;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c0:visited {
  color: #3e486e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

<div>
  <a
    class="c0"
  >
    Ok
  </a>
</div>
`;
